--- a/src/components/AnimeButton/AnimeButton.scss
+++ b/src/components/AnimeButton/AnimeButton.scss
@@ -8,7 +8,7 @@ button#animeButton {
   justify-content: center;
   align-items: center;
   position: relative;
-  background-color: #fff;
+  background-color: transparent;
   border: none;
   overflow: hidden;
   transition: all 0.3s;
