--- a/src/components/ProductsUL/ProductsUL.scss
+++ b/src/components/ProductsUL/ProductsUL.scss
@@ -69,7 +69,7 @@ ul {
       position: absolute;
       left: 0.5rem;
       top: 0.5rem;
-      background-color: #fff;
+      background-color: var(--bg-color);
       border-radius: 50%;
       border: none;
       display: flex;
